fix(app): correct text-align for all th elements

--- a/crates/site-app/style/src/components/table.css
+++ b/crates/site-app/style/src/components/table.css
@@ -15,11 +15,6 @@
     @apply whitespace-nowrap;
   }
 
-  .table thead th {
-    /* text */
-    @apply text-start;
-  }
-
   .table thead {
     /* border */
     @apply border-b-base-6 border-b;
@@ -38,7 +33,7 @@
 
   .table th {
     /* text */
-    @apply leading-normal font-bold;
+    @apply text-start leading-normal font-bold;
 
     /* color */
     @apply text-base-12;
